# Learning-buddy

./: .env  README.md  api.py  backend.py  db.py  db_textsimplification.py  debate.html  debate2.html  docc.txt  embed_pdf.py  index.html  index2.html  lecture.html  main.html  main.py  models.py  pyproject.toml  quiz.html  quiz2.html  search.py  seed_users.py  simplify.html  textsimplification.html
apis/: test.py
