[project]
name = "learning-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.18.0",
    "langchain-google-genai>=2.1.5",
    "langchain-qdrant>=0.2.0",
    "numpy>=2.2.6",
    "python-dotenv>=1.1.0",
    "whisperx>=3.3.4",
]
