[project]
name = "learning-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "elevenlabs>=2.3.0",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.18.0",
    "google-search-results>=2.4.2",
    "googlesearch-python>=1.3.0",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "kaggle>=1.7.4.5",
    "langchain-google-genai>=2.1.5",
    "langchain-qdrant>=0.2.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pymongo>=4.13.2",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scholarly>=1.7.11",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "urlquote>=2.1.0",
    "whisperx>=3.3.4",
]
